progress on the main content readability (font-size fix)

--- a/client/private/scss/fonts/_typography.scss
+++ b/client/private/scss/fonts/_typography.scss
@@ -75,9 +75,9 @@ a {
 .intro {
   position: relative;
   overflow: hidden;
-  font-size: 1.5em;
-  font-style: italic;
+  font-size: 1.275em;
   text-indent: 1.75em !important;
+  font-style: italic;
   color: $grey-dark;
   //color: $brown;
 
