--- a/client/private/scss/layout/_result.scss
+++ b/client/private/scss/layout/_result.scss
@@ -128,9 +128,10 @@
 }
 
 .cat-content {
-  * {
-      color: inherit;
-      line-height: $line-height-base;
+  *, h1, h2, h3, h4, h5, h6, p {
+    font-size: inherit;
+    color: inherit;
+    line-height: $line-height-base;
     }
   table {
     width: 100%;
